Added jobs enpoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.116.1",
+    "ruff>=0.12.7",
+    "python-jobspy>=1.1.82",
+    "uvicorn[standard]>=0.20.0",
+]
